--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "chai": "^4.1.2",
     "jest": "^23.4.2",
+    "js-types": "^2.1.0",
     "mocha": "^5.2.0"
   },
   "jest": {
